src/App.css
.logo{
color:#61A4BC !important;
 font-family: 'Oleo Script', cursive;
}

.navbar{
    background-color:#1A132F!important;
  
}
.headline{
    font-family: 'Oleo Script', cursive;
    color:mediumaquamarine;
    box-shadow:  -1.6px  3px 10px #bbeff8ce ;
    border-radius: 0.5em;
    margin-bottom: 3vh;
}
.headline:hover{
    text-decoration:underline;
    cursor: pointer;
}
.card{
    border-radius: 1em;
    transition: cubic-bezier(0.075, 0.82, 0.165, 1) 1s;
    box-shadow: -1.6px  3px 10px #e6e1e1ce ;
}
.card:hover{
    transform: scale(1.01);
}
.card-img-top{
    border-radius: 1em 1em 0.1em 0.1em;
}
.page-button{
    display: flex;
    justify-content: space-between;
    align-items: center;
}
.sp-font{
    font-family: 'Oleo Script', cursive;
}
.nav-link{
    color:white !important;
    transition: cubic-bezier(0.175, 0.885, 0.32, 1.275) 1s;
}
.nav-link:hover{
    color:#61A4BC !important;
    transform: scale(1.03);
}
.navbar-toggler{
    background-color:#61A4BC !important;
}

